<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/toolbar"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@android:color/black"
android:layout_alignParentTop="true"
android:layout_alignParentStart="true"
android:layout_alignParentEnd="true"
android:fitsSystemWindows="true"
    android:elevation="24dp">

<RelativeLayout
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="2dp"
    android:paddingBottom="0dp">

    <ImageButton
        android:id="@+id/toolbar_back"
        android:layout_width="48dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="6dp"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:src="@drawable/ic_action_back"
        android:visibility="invisible"/>

    <ImageView
        android:contentDescription="@string/authentic_city_church_logo_content_description"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/expanded_menu"
        android:layout_toEndOf="@id/toolbar_back"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/title" />

    <ImageButton
        android:id="@+id/expanded_menu"
        android:layout_width="48dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/info"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="6dp"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:src="@drawable/ic_action_more"/>
</RelativeLayout>


</RelativeLayout>