<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/toolbar" android:background="@android:color/black">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        android:id="@+id/title">
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:background="@android:color/transparent"
            android:id="@+id/home_down_arrow"
            android:src="@drawable/ic_keyboard_arrow_down_white_36dp"
            android:contentDescription="@string/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentic"
            android:layout_toEndOf="@id/home_down_arrow"
            android:layout_toStartOf="@id/expanded_menu"
            android:textSize="20sp"
            android:letterSpacing="0.25"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:id="@+id/home_title"/>
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:id="@+id/expanded_menu"
            android:src="@drawable/outline_info_white_24"
            android:background="@android:color/transparent"
            android:contentDescription="@string/info"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/title"
        android:background="@android:color/white"
        android:id="@+id/home_livestream_container">
    </RelativeLayout>
</RelativeLayout>