<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_refresh_layout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true">

                    <RelativeLayout
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="2dp"
                        android:paddingBottom="0dp">

                        <ImageButton
                            android:id="@+id/home_down_arrow"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/back"
                            android:paddingStart="0dp"
                            android:paddingTop="0dp"
                            android:paddingEnd="0dp"
                            android:paddingBottom="0dp"
                            android:src="@drawable/ic_keyboard_arrow_down_white_36dp" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@id/expanded_menu"
                            android:layout_toEndOf="@id/home_down_arrow"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/title" />

                        <ImageButton
                            android:id="@+id/expanded_menu"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/info"
                            android:paddingStart="0dp"
                            android:paddingTop="0dp"
                            android:paddingEnd="0dp"
                            android:paddingBottom="0dp"
                            android:src="@drawable/outline_info_white_24" />
                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:background="@android:color/white"
                    android:id="@+id/livestream"
                    android:layout_below="@+id/toolbar"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true">

                    <ProgressBar
                        android:id="@+id/livestream_progress"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:indeterminate="true"
                        android:indeterminateTint="@android:color/black" />

                    <TextView
                        android:id="@+id/livestream_watch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="8dp"
                        android:alpha="0"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:padding="8dp"
                        android:text="@string/watch_live_on_youtube"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/livestream_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:alpha="0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/livestream_sundays"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:letterSpacing="0.1"
                            android:text="@string/sunday_night"
                            android:textColor="@android:color/black"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/livestream_services"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:letterSpacing="0.1"
                            android:text="@string/the_5_the_7"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_below="@+id/livestream"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/tiles_main">

                    <LinearLayout
                        android:id="@+id/tile_list_left"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical" />

                    <LinearLayout
                        android:id="@+id/tile_list_right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical" />
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>